@@ -18,6 +18,8 @@ import java.util.Date
 
 import org.apache.hadoop.conf.Configuration
 import org.apache.hadoop.hbase.{HConstants, HBaseTestingUtility}
+import org.apache.phoenix.end2end.BaseHBaseManagedTimeIT
+import org.apache.phoenix.query.BaseTest
 import org.apache.phoenix.schema.ColumnNotFoundException
 import org.apache.phoenix.schema.types.PVarchar
 import org.apache.phoenix.util.ColumnInfo
@@ -25,53 +27,46 @@ import org.apache.spark.sql.{SaveMode, execution, SQLContext}
 import org.apache.spark.sql.types.{LongType, DataType, StringType, StructField}
 import org.apache.spark.{SparkConf, SparkContext}
 import org.joda.time.DateTime
-import org.scalatest.{BeforeAndAfterAll, FunSuite, Matchers}
+import org.scalatest._
 import org.apache.phoenix.spark._
 
 import scala.collection.mutable.ListBuffer
 
-class PhoenixRDDTest extends FunSuite with Matchers with BeforeAndAfterAll {
-  lazy val hbaseTestingUtility = {
-    new HBaseTestingUtility()
-  }
+/*
+  Note: If running directly from an IDE, these are the recommended VM parameters:
+  -Xmx1536m -XX:MaxPermSize=512m -XX:ReservedCodeCacheSize=512m
+ */
+
+// Helper object to access the protected abstract static methods hidden in BaseHBaseManagedTimeIT
+object PhoenixSparkITHelper extends BaseHBaseManagedTimeIT {
+  def getTestClusterConfig = BaseHBaseManagedTimeIT.getTestClusterConfig
+  def doSetup = BaseHBaseManagedTimeIT.doSetup()
+  def doTeardown = BaseHBaseManagedTimeIT.doTeardown()
+  def getUrl = BaseTest.getUrl
+}
+
+class PhoenixSparkIT extends FunSuite with Matchers with BeforeAndAfterAll {
+  var conn: Connection = _
+  var sc: SparkContext = _
 
   lazy val hbaseConfiguration = {
-    val conf = hbaseTestingUtility.getConfiguration
-
+    val conf = PhoenixSparkITHelper.getTestClusterConfig
+    // The zookeeper quorum address defaults to "localhost" which is incorrect, let's fix it
     val quorum = conf.get("hbase.zookeeper.quorum")
     val clientPort = conf.get("hbase.zookeeper.property.clientPort")
     val znodeParent = conf.get("zookeeper.znode.parent")
-
-    // This is an odd one - the Zookeeper Quorum entry in the config is totally wrong. It's
-    // just reporting localhost.
-    conf.set(org.apache.hadoop.hbase.HConstants.ZOOKEEPER_QUORUM, s"$quorum:$clientPort:$znodeParent")
-
+    conf.set(HConstants.ZOOKEEPER_QUORUM, s"$quorum:$clientPort:$znodeParent")
     conf
   }
 
   lazy val quorumAddress = {
-    hbaseConfiguration.get("hbase.zookeeper.quorum")
+    hbaseConfiguration.get(HConstants.ZOOKEEPER_QUORUM)
   }
-
-  lazy val zookeeperClientPort = {
-    hbaseConfiguration.get("hbase.zookeeper.property.clientPort")
-  }
-
-  lazy val zookeeperZnodeParent = {
-    hbaseConfiguration.get("zookeeper.znode.parent")
-  }
-
-  lazy val hbaseConnectionString = {
-    s"$quorumAddress:$zookeeperClientPort:$zookeeperZnodeParent"
-  }
-
-  var conn: Connection = _
 
   override def beforeAll() {
-    hbaseTestingUtility.startMiniCluster()
+    PhoenixSparkITHelper.doSetup
 
-    conn = DriverManager.getConnection(s"jdbc:phoenix:$hbaseConnectionString")
-
+    conn = DriverManager.getConnection(PhoenixSparkITHelper.getUrl)
     conn.setAutoCommit(true)
 
     // each SQL statement used to set up Phoenix must be on a single line. Yes, that
@@ -82,23 +77,23 @@ class PhoenixRDDTest extends FunSuite with Matchers with BeforeAndAfterAll {
 
     for (sql <- setupSql) {
       val stmt = conn.createStatement()
-
       stmt.execute(sql)
-
-      stmt.close()
     }
-
     conn.commit()
+
+    val conf = new SparkConf()
+      .setAppName("PhoenixSparkIT")
+      .setMaster("local[2]") // 2 threads, some parallelism
+      .set("spark.ui.showConsoleProgress", "false") // Disable printing stage progress
+
+    sc = new SparkContext(conf)
   }
 
   override def afterAll() {
     conn.close()
-    hbaseTestingUtility.shutdownMiniCluster()
+    sc.stop()
+    PhoenixSparkITHelper.doTeardown
   }
-
-  val conf = new SparkConf().set("spark.ui.showConsoleProgress", "false")
-
-  val sc = new SparkContext("local[1]", "PhoenixSparkTest", conf)
 
   def buildSql(table: String, columns: Seq[String], predicate: Option[String]): String = {
     val query = "SELECT %s FROM \"%s\"" format(columns.map(f => "\"" + f + "\"").mkString(", "), table)
@@ -157,8 +152,9 @@ class PhoenixRDDTest extends FunSuite with Matchers with BeforeAndAfterAll {
   test("Can create schema RDD and execute query on case sensitive table (no config)") {
     val sqlContext = new SQLContext(sc)
 
+
     val df1 = sqlContext.phoenixTableAsDataFrame("table3", Array("id", "col1"),
-      zkUrl = Some(hbaseConnectionString))
+      zkUrl = Some(quorumAddress))
 
     df1.registerTempTable("table3")
 
@@ -300,7 +296,6 @@ class PhoenixRDDTest extends FunSuite with Matchers with BeforeAndAfterAll {
     while (rs.next()) {
       results.append((rs.getLong(1), rs.getString(2), rs.getInt(3)))
     }
-    stmt.close()
 
     // Verify they match
     (0 to results.size - 1).foreach { i =>
@@ -317,8 +312,8 @@ class PhoenixRDDTest extends FunSuite with Matchers with BeforeAndAfterAll {
       .parallelize(dataSet)
       .saveToPhoenix(
         "OUTPUT_TEST_TABLE",
-        Seq("ID", "COL1", "COL2", "COL3"),
-        zkUrl = Some(hbaseConnectionString)
+        Seq("ID","COL1","COL2","COL3"),
+        zkUrl = Some(quorumAddress)
       )
 
     // Load the results back
@@ -328,7 +323,6 @@ class PhoenixRDDTest extends FunSuite with Matchers with BeforeAndAfterAll {
     while (rs.next()) {
       results.append(rs.getDate(1))
     }
-    stmt.close()
 
     // Verify the epochs are equal
     results(0).getTime shouldEqual dt.getMillis
@@ -355,7 +349,7 @@ class PhoenixRDDTest extends FunSuite with Matchers with BeforeAndAfterAll {
   test("Spark SQL can use Phoenix as a data source with no schema specified") {
     val sqlContext = new SQLContext(sc)
     val df = sqlContext.load("org.apache.phoenix.spark", Map("table" -> "TABLE1",
-      "zkUrl" -> hbaseConnectionString))
+      "zkUrl" -> quorumAddress))
     df.count() shouldEqual 2
     df.schema("ID").dataType shouldEqual LongType
     df.schema("COL1").dataType shouldEqual StringType
@@ -364,7 +358,7 @@ class PhoenixRDDTest extends FunSuite with Matchers with BeforeAndAfterAll {
   test("Spark SQL can use Phoenix as a data source with PrunedFilteredScan") {
     val sqlContext = new SQLContext(sc)
     val df = sqlContext.load("org.apache.phoenix.spark", Map("table" -> "TABLE1",
-      "zkUrl" -> hbaseConnectionString))
+      "zkUrl" -> quorumAddress))
     val res = df.filter(df("COL1") === "test_row_1" && df("ID") === 1L).select(df("ID"))
 
     // Make sure we got the right value back
@@ -383,10 +377,10 @@ class PhoenixRDDTest extends FunSuite with Matchers with BeforeAndAfterAll {
     // Load from TABLE1
     val sqlContext = new SQLContext(sc)
     val df = sqlContext.load("org.apache.phoenix.spark", Map("table" -> "TABLE1",
-      "zkUrl" -> hbaseConnectionString))
+      "zkUrl" -> quorumAddress))
 
     // Save to TABLE1_COPY
-    df.saveToPhoenix("TABLE1_COPY", zkUrl = Some(hbaseConnectionString))
+    df.saveToPhoenix("TABLE1_COPY", zkUrl = Some(quorumAddress))
 
     // Verify results
     val stmt = conn.createStatement()
@@ -411,10 +405,10 @@ class PhoenixRDDTest extends FunSuite with Matchers with BeforeAndAfterAll {
     // Load TABLE1, save as TABLE1_COPY
     val sqlContext = new SQLContext(sc)
     val df = sqlContext.load("org.apache.phoenix.spark", Map("table" -> "TABLE1",
-      "zkUrl" -> hbaseConnectionString))
+      "zkUrl" -> quorumAddress))
 
     // Save to TABLE21_COPY
-    df.save("org.apache.phoenix.spark", SaveMode.Overwrite, Map("table" -> "TABLE1_COPY", "zkUrl" -> hbaseConnectionString))
+    df.save("org.apache.phoenix.spark", SaveMode.Overwrite, Map("table" -> "TABLE1_COPY", "zkUrl" -> quorumAddress))
 
     // Verify results
     stmt = conn.createStatement()
